--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #11061d;
 }
 
 code {
